@@ -1,4 +1,8 @@
 
+2008-10-09
+
+   * [MINOR]    Changed highlight color to yellow from red, and fixed multiline bug
+
 2008-09-08
 
    * [FEATURE]  Code Completion now shows definition of code
